03: Sidebar and Header

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"typegen": "sanity schema extract && sanity typegen generate"
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^6.21.0",
